--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Terraform
+.terraform/
+.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
