--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -25,7 +25,7 @@ jobs:
           export_default_credentials: true
 
       - name: Configure Docker Auth for GCR
-        run: gcloud auth configure-docker --quiet
+        run: gcloud auth configure-docker gcr.io --quiet
 
       - name: Build Docker image
         run: |
