--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -25,15 +25,17 @@ jobs:
           export_default_credentials: true
 
       - name: Configure Docker Auth for Artifact Registry
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+        run: |
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
 
       - name: Build Docker image
         run: |
-          IMAGE="us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.SERVICE_NAME }}:${{ github.sha }}"
+          IMAGE="us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.SERVICE_NAME }}/${{ env.SERVICE_NAME }}:${{ github.sha }}"
           docker build -t $IMAGE .
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
 
-      - name: Push image to GCR
+      - name: Push image to Artifact Registry
         run: docker push $IMAGE
 
       - name: Terraform Init
@@ -47,7 +49,8 @@ jobs:
         run: terraform plan \
           -var="project=${{ secrets.GCP_PROJECT }}" \
           -var="region=${{ secrets.GCP_REGION }}" \
-          -var="image=${{ env.IMAGE }}"
+          -var="image=${{ env.IMAGE }}" \
+          -var="state_bucket_name=${{ secrets.TF_STATE_BUCKET }}"
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
@@ -55,7 +58,8 @@ jobs:
         run: terraform apply -auto-approve \
           -var="project=${{ secrets.GCP_PROJECT }}" \
           -var="region=${{ secrets.GCP_REGION }}" \
-          -var="image=${{ env.IMAGE }}"
+          -var="image=${{ env.IMAGE }}" \
+          -var="state_bucket_name=${{ secrets.TF_STATE_BUCKET }}"
 
       - name: Output Cloud Run URL
         working-directory: terraform
