--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Configure Docker Auth for Artifact Registry
         run: |
-          gcloud auth print-access-token --quiet | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
       - name: Build Docker image
         run: |
