--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -24,8 +24,10 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Configure Docker Auth for Artifact Registry
+      - name: Authenticate to Google Cloud for Docker
         run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > ${HOME}/gcp-key.json
+          gcloud auth activate-service-account --key-file=${HOME}/gcp-key.json
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
       - name: Build Docker image
