--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -26,9 +26,10 @@ jobs:
 
       - name: Authenticate to Google Cloud for Docker
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" | base64 --decode > ${HOME}/gcp-key.json || echo "${{ secrets.GCP_SA_KEY }}" > ${HOME}/gcp-key.json
-          gcloud auth activate-service-account --key-file=${HOME}/gcp-key.json
+          # setup-gcloud already authenticates, but we need to explicitly configure Docker
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          # Use access token for Docker login
+          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
 
       - name: Build Docker image
         run: |
