--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Authenticate to Google Cloud for Docker
         run: |
           # Write service account key to file and activate it
-          echo '${{ secrets.GCP_SA_KEY }}' > ${HOME}/gcp-key.json
+          cat > ${HOME}/gcp-key.json << 'EOF'
+          ${{ secrets.GCP_SA_KEY }}
+          EOF
           gcloud auth activate-service-account --key-file=${HOME}/gcp-key.json --quiet
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
           # Use access token for Docker login
