--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -25,11 +25,12 @@ jobs:
           export_default_credentials: true
 
       - name: Authenticate to Google Cloud for Docker
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
           # Write service account key to file and activate it
-          cat > ${HOME}/gcp-key.json << 'EOF'
-          ${{ secrets.GCP_SA_KEY }}
-          EOF
+          # Try base64 decode first, fallback to direct write
+          echo "$GCP_SA_KEY" | base64 -d > ${HOME}/gcp-key.json 2>/dev/null || echo "$GCP_SA_KEY" > ${HOME}/gcp-key.json
           gcloud auth activate-service-account --key-file=${HOME}/gcp-key.json --quiet
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
           # Use access token for Docker login
