--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Push image to Artifact Registry
         run: docker push $IMAGE
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.6.0"
+          terraform_wrapper: false
+
       - name: Terraform Init
         working-directory: terraform
         run: terraform init \
