--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -24,7 +24,7 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Authenticate to Google Cloud for Docker
+      - name: Authenticate to Google Cloud
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
@@ -32,6 +32,10 @@ jobs:
           # Try base64 decode first, fallback to direct write
           echo "$GCP_SA_KEY" | base64 -d > ${HOME}/gcp-key.json 2>/dev/null || echo "$GCP_SA_KEY" > ${HOME}/gcp-key.json
           gcloud auth activate-service-account --key-file=${HOME}/gcp-key.json --quiet
+          # Export credentials for Terraform
+          export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcp-key.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcp-key.json" >> $GITHUB_ENV
+          # Configure Docker
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
           # Use access token for Docker login
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
