--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Run unit tests
         run: pytest -v
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.6.0"
+          terraform_wrapper: false
+
       - name: Validate Terraform
         run: |
           cd terraform
